index, home, about configured

--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -2,6 +2,15 @@
 
 
 {% block content %}
-    <h1>About page</h1>
+<h1 class="color-primary my-5">About BirdWatcher <i class="fa-solid fa-feather-pointed"></i></h1>
+<hr class="border border-2">
+<p class="color-secondary fs-5">BirdWatcher is an App created using Django. I made it for practice but take alot of pride in my work. If you have any suggestions, let me know!</p>
+<br>
+<p class="color-secondary">BirdWatcher is a social and informational app for bird-lovers and bird-watchers! Enthusiasts can share sightings and information on different species. Functionalities I have in mind are:</p>
+<ul class="color-secondary">
+    <li>Images</li>
+    <li>map views</li>
+    <li>external info sources</li>
+    <li>separating bird info from sightings but sharing elements</li>
+</ul>
 {% endblock content %}
-    
