--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -6,20 +6,50 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <script src="https://kit.fontawesome.com/267532a2de.js" crossorigin="anonymous"></script>
     <title>BirdWatcher</title>
 </head>
 
 <body>
-    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    <a href="/">Home</a>
-    <a href="/about">About</a>
-    <a href="/birds">View Birds</a>
-    {% block content %}
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
+    <div>
+        <nav class="navbar primary">
+            <div class="container-fluid">
+            <button class="btn btn-lg" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions"
+                aria-controls="offcanvasWithBothOptions"><i class="fa-solid fa-bars"></i></button>
+            <div class="position-absolute start-50 navbar-brand fs-2">
+                <i class="fa-solid fa-feather-pointed"></i>
+            </div>
+        </div>
+        </nav>
+    </div>
+    <div class="offcanvas offcanvas-start" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions"
+        aria-labelledby="offcanvasWithBothOptionsLabel">
+        <div class="offcanvas-header">
+            <button type="button" class="btn-close btn-close-white text-reset" data-bs-dismiss="offcanvas"
+                aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body">
+            <div class="container">
+                <ul class="list-group-flush fs-2">
+                    <a class="list-group-item link-light my-1" href="/">Home</a>
+                    <a class="list-group-item link-light my-1" href="/about">About</a>
+                    <a class="list-group-item link-light my-1" href="/birds">View Birds</a>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="container">
 
-    {% endblock content %}
+        {% block content %}
 
+        {% endblock content %}
+    </div>
 </body>
 
 </html>
