--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -40,6 +40,7 @@
                     <a class="list-group-item link-light my-1" href="/">Home</a>
                     <a class="list-group-item link-light my-1" href="/about">About</a>
                     <a class="list-group-item link-light my-1" href="/birds">View Birds</a>
+                    <a class="list-group-item link-light my-1" href="{% url 'birds_create' %}">New Bird</a>
                 </ul>
             </div>
         </div>
