--- a/main_app/templates/main_app/location_form.html
+++ b/main_app/templates/main_app/location_form.html
@@ -7,9 +7,8 @@
 <style>
     #map {
         position: absolute;
-        top: 0;
-        bottom: 0;
-        width: 100%;
+        opacity: 0;
+        pointer-events: none;
     }
 </style>
 <title>BirdWatcher</title>
