small style tweaks

--- a/main_app/templates/birds/index.html
+++ b/main_app/templates/birds/index.html
@@ -2,7 +2,7 @@
 
 
 {% block content %}
-<h1 class="color-primary fs-1 my-5">Birds Seen</h1>
+<h1 class="color-primary fs-1 my-5">Birds</h1>
 <div class="row">
     {% for bird in birds %}
     <div class="col-sm-6">
