--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -6,10 +6,9 @@
 <hr class="border-2">
 <p class="color-secondary fs-5">BirdWatcher is an App created using Django. I made it for practice but take alot of pride in my work. If you have any suggestions, let me know!</p>
 <br>
-<p class="color-secondary">BirdWatcher is a social and informational app for bird-lovers and bird-watchers! Enthusiasts can share sightings and information on different species. Functionalities I have in mind are:</p>
+<p class="color-secondary">BirdWatcher is a social and informational app for bird-lovers and bird-watchers! Enthusiasts can share locations, sightings and information on different species. Additions I have in mind are:</p>
 <ul class="color-secondary">
     <li>Images</li>
-    <li>map views</li>
     <li>external info sources</li>
 </ul>
 {% endblock content %}
