--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -1,12 +1,13 @@
 {% extends 'base.html' %}
 
-
 {% block content %}
 <h1 class="color-primary my-5">About BirdWatcher <i class="fa-solid fa-feather-pointed"></i></h1>
 <hr class="border-2">
-<p class="color-secondary fs-5">BirdWatcher is an App created using Django. I made it for practice but take alot of pride in my work. If you have any suggestions, let me know!</p>
+<p class="color-secondary fs-5">BirdWatcher is an App created using Django. I made it for practice but take alot of
+    pride in my work. If you have any suggestions, let me know!</p>
 <br>
-<p class="color-secondary">BirdWatcher is a social and informational app for bird-lovers and bird-watchers! Enthusiasts can share locations, sightings and information on different species. Additions I have in mind are:</p>
+<p class="color-secondary">BirdWatcher is a social and informational app for bird-lovers and bird-watchers! Enthusiasts
+    can share locations, sightings and information on different species. Additions I have in mind are:</p>
 <ul class="color-secondary">
     <li>Images</li>
     <li>external info sources</li>
