--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -9,27 +9,25 @@
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <script src="https://kit.fontawesome.com/267532a2de.js" crossorigin="anonymous"></script>
-    
     {% block head %}
-        
+
     {% endblock head %}
-    </head>
+</head>
 
 <body>
-
-
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
     <div>
         <nav class="navbar primary">
             <div class="container-fluid">
-            <button class="btn btn-lg" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions"
-                aria-controls="offcanvasWithBothOptions"><i class="fa-solid fa-bars"></i></button>
-            <div class="position-absolute start-50 navbar-brand fs-2">
-                <i class="fa-solid fa-feather-pointed"></i>
+                <button class="btn btn-lg" type="button" data-bs-toggle="offcanvas"
+                    data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions"><i
+                        class="fa-solid fa-bars"></i></button>
+                <div class="position-absolute start-50 navbar-brand fs-2">
+                    <i class="fa-solid fa-feather-pointed"></i>
+                </div>
             </div>
-        </div>
         </nav>
     </div>
     <div class="offcanvas offcanvas-start" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions"
@@ -52,10 +50,10 @@
         </div>
     </div>
     <div class="container">
-
         {% block content %}
 
         {% endblock content %}
     </div>
 </body>
+
 </html>
